Add Notion Link

--- a/index.html
+++ b/index.html
@@ -1134,12 +1134,14 @@
                         Developing a speculative card game inspired by Biomimicry & AskNature, where players assume attributes of different organisms and combine them to respond to shared challenges.
                     </p>
                 </div>
+                <a href="https://jamuri.notion.site/ce3109d3f0a74a02b29534ee02955854?v=61c9b3e7c0fb4e9b86d68064f9afbf44" class="next-project-link" target="_blank">
                 <div class="next-project">
                     <h3>Origami Kinetic Sculptures</h3>
                     <p>
                         Working on a series of origami-based kinetic sculptures as an art practice. Exploring how paper folding and mechanical principles can result in movement and play.
                     </p>
                 </div>
+                </a>
                 <a href="boids.html" class="next-project-link">
                     <div class="next-project">
                         <h3>Simulating Natural Behaviour with Code</h3>
