Change Origami card heading

--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
                 </div>
                 <a href="https://jamuri.notion.site/ce3109d3f0a74a02b29534ee02955854?v=61c9b3e7c0fb4e9b86d68064f9afbf44" class="next-project-link" target="_blank">
                 <div class="next-project">
-                    <h3>Origami Kinetic Sculptures</h3>
+                    <h3>Origami Sculptures</h3>
                     <p>
                         Working on a series of origami-based kinetic sculptures as an art practice. Exploring how paper folding and mechanical principles can result in movement and play.
                     </p>
