Rerote most text - descriptive and reduced size of images to fit better on a screen

--- a/index.html
+++ b/index.html
@@ -314,6 +314,8 @@
 
         .project-image img {
             width: 100%;
+            max-height: 450px;  /* Add this line */
+    		object-fit: cover;  /* Add this line */
             height: auto;
             border-radius: 4px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
@@ -330,7 +332,7 @@
 		}
 
 		.project-images.SLE-large img {
-  		 	max-height: 600px;  /* Or whatever height you want */
+  		 	max-height: 400px;  /* Or whatever height you want */
 		}
 
 		.project-images.everyday-large {
@@ -338,7 +340,7 @@
 		}
 
 		.project-images.everyday-large img {
-  		 	max-height: 600px;  /* Or whatever height you want */
+  		 	max-height: 400px;  /* Or whatever height you want */
 		}
 
 		.project-images.river-layout {
@@ -386,6 +388,8 @@
 
         .about-image img {
             max-width: 100%;
+            max-height: 450px;  /* Add this line */
+    		object-fit: cover;  /* Add this line */
             height: auto;
             border-radius: 4px;
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.12);
@@ -477,7 +481,7 @@
 
         .practice-image img {
             width: 100%;
-            max-height: 800px;
+            max-height: 500px;
             object-fit: cover;
             border-radius: 4px;
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.12);
@@ -854,6 +858,9 @@
                 <p class="lead-text">
                     I use workshops as a way to bridge together different ways of knowing, rather than treating learning as information transfer. They are designed as participatory spaces where people move between engaging with the content and each other.
                 </p>
+                <p>
+                   Across varied contexts, workshops have become a practical method for enabling shifts in perspective and shared inquiry.
+                </p>
             </div>
             <div class="practice-image">
                 <img src="images/Practice_1.jpeg" alt="Workshop practice">
@@ -901,7 +908,8 @@
                             <img src="images/Srishti_2.jpeg" alt="Narrative exploration">
                         </div>
                         <p>
-                            Explored storytelling through images, objects, sound, movement, and space, translating the same narrative across different forms. This two week workshop reframed narrative as things we actively construct, not just consume.
+                            Explored storytelling through images, objects, sound, movement, and space, translating the same narrative across different forms. This two week workshop reframed narrative as things we actively construct, not just consume, restoring agency through making 
+                            and interpretation. 
                         </p>
                     </div>
                 </div>
@@ -917,7 +925,7 @@
                     </div>
                     <div class="project-content">
                         <p class="project-bridge">
-                            <strong>The bridge:</strong> Bridging nature and technological wonder through close observation of marine and terrestrial organisms.
+                            <strong>The bridge:</strong> Bridging nature and technological wonder through close observation of marine and terrestrial organisms, exploring how nature solves problems and adapts to complex conditions..
                         </p>
                         <div class="project-image">
                             <img src="images/Biomimicry_1.jpeg" alt="Biomimicry workshop">
@@ -947,7 +955,7 @@
                             <img src="images/River_3.jpeg" alt="Community engagement">
                         </div>
                         <p>
-                            Participants walked the riverbanks, identified plants, shared stories, and created zines using local materials. The workshops created space for intergenerational knowledge exchange.
+                            Participants walked the riverbanks, identified plants, shared stories, and created zines using local materials. The workshops created space for intergenerational knowledge exchange, where conservation emerged from dialogue, and lived relationships with the river..
                         </p>
                     </div>
                 </div>
@@ -961,8 +969,12 @@
                 <span class="section-label">Practice II</span>
                 <h2 class="section-title">Mediation</h2>
                 <p class="lead-text">
-                    Mediation at Science Gallery is a form of informal education, where mediators support visitors in engaging with exhibits through conversation. I experienced this as a way of thinking alongside people.
+                    Mediation at Science Gallery is a form of informal education, where mediators support visitors in engaging with exhibits through conversation.
                 </p>
+                <p>
+                	I experienced mediation as a way of thinking alongside people. Conversations unfolded based on what visitors were drawn to, what felt unfamiliar, or what they wanted to spend time with.
+					I tried to stay responsive, allowing learning to grow through dialogue and proximity with the objects.
+           		</p>
             </div>
             <div class="practice-image">
                 <img src="images/Practice_2.jpeg" alt="Mediation practice">
@@ -1010,7 +1022,7 @@
                             <img src="images/SLE_2.jpeg" alt="School visit">
                         </div>
                         <p>
-                            Sessions worked with the energy students arrived with, gradually shaping it into shared attention and wonder. Objects became portals for discussion.
+                            Sessions worked with the energy students arrived with, gradually shaping it into shared attention and wonder. Objects became portals for discussion allowing linear learning to occur without relying on rigid instruction. .
                         </p>
                     </div>
                 </div>
@@ -1024,14 +1036,17 @@
                     </div>
                     <div class="project-content">
                         <p class="project-bridge">
-                            <strong>Intention:</strong> Using meticulously researched themes to encourage deeper connections with familiar topics.
+                            <strong>Intention:</strong> Using meticulously researched themes to encourage deeper connections with familiar topics, enabling novel experiences of the same space.
                         </p>
                         <div class="project-images">
                             <img src="images/DesignedExp_1.jpeg" alt="Designed experience">
                             <img src="images/DesignedExp_2.png" alt="Workshop design">
                         </div>
                         <p>
-                            Created sessions on Umwelt, developed Visual Bingo using close-up images, and rethought feedback systems to encourage higher quality responses.
+                            Created sessions on the concept of Umwelt,and designed walkthroughs that explored human sensory systems and the experience of slowing down time. These formats were used to examine how perception shapes understanding. 
+                            </p>
+                        <p>
+                            Developed Visual Bingo using close-up images to deepen engagement with the exhibits, inviting visitors to search for and notice elements that are often overlooked, and rethought feedback systems to encourage higher quality responses.
                         </p>
                     </div>
                 </div>
@@ -1045,7 +1060,10 @@
                 <span class="section-label">Practice III</span>
                 <h2 class="section-title">Ecology & Field Work</h2>
                 <p class="lead-text">
-                    My ecological work has been grounded in physical presence - being in forests, rivers and reefs over extended periods. These projects have fundamentally changed who I am and heavily influenced how I see the world.
+                    My ecological work has been grounded in physical presence - being in forests, rivers and reefs over extended periods. Much of this work unfolded in difficult conditions, requiring empathy and a willingness to learn without clear answers.
+                </p>
+                <p>
+                    I have been drawn to roles that sit at the boundary between natural systems and human activity, contributing to conservation efforts while learning how environmental care is shaped by people and institutions. These next projects have fundamentally changed who I am and have heavily influenced how I see the world. These projects have fundamentally changed who I am and heavily influenced how I see the world.
                 </p>
             </div>
             <div class="practice-image">
@@ -1073,14 +1091,17 @@
                             <div class="role-section">
                                 <h4>My Role:</h4>
                                 <p>
-                                    Carried out flora surveys along the river using ~100 m transects. Fieldwork was largely self-directed: scouting sites via maps, trekking to river edges, logging GPS-tagged observations, compiling data from ~50 transects across 25 km.
+                                    Carried out flora surveys along the river using ~100 m transects to document species diversity and riparian vegetation patterns for restoration planning. 
+                                </p>
+                                <p>                      
+                                	Fieldwork was largely self-directed: scouting sites via maps, trekking to river edges, logging GPS-tagged observations, compiling data from ~50 transects across 25 km.
                                 </p>
                             </div>
                         </div>
                         <div class="reflection">
                             <h4>How I Changed:</h4>
                             <p>
-                                This work reshaped my understanding of where conservation comes from. It is inseparable from livelihoods, governments, and traditional knowledge. Ecological restoration requires patience, trust, and attention to social realities as much as environmental data.
+                                This work reshaped my understanding of where conservation comes from. It is inseparable from livelihoods, governments, and traditional knowledge. Taught me that the process of ecological restoration requires patience, trust, and attention to social realities as much as environmental data.
                             </p>
                         </div>
                     </div>
@@ -1106,14 +1127,17 @@
                             <div class="role-section">
                                 <h4>My Role:</h4>
                                 <p>
-                                    Assisted with reef monitoring and coral restoration work, learning to scuba dive and documenting coral growth. Facilitated nature walks around the base across marine, intertidal, mangrove and rainforest ecosystems.
+                                    Assisted with reef monitoring and coral restoration work, learning to scuba dive and documenting coral growth. 
+                                </p>  
+                                <p>
+                                	Facilitated nature walks around the base. Due to its close proximity to marine, intertidal, mangrove and rainforest ecosystems, these walks usually were full of wonder and learning. 
                                 </p>
                             </div>
                         </div>
                         <div class="reflection">
                             <h4>How I Changed:</h4>
                             <p>
-                                This was my first sustained experience of conservation work and living within a natural system. Everyday mindful contact with damaged reef systems reshaped how I understood ecology, responsibility, and what it means to learn from a place rather than about it.
+                                This was my first sustained experience of conservation work and living within a natural system. Everyday mindful contact with damaged reef systems reshaped how I understood ecological responsibility, and what it means to learn from a place rather than about it.
                             </p>
                         </div>
                     </div>
@@ -1146,7 +1170,7 @@
                     <div class="next-project">
                         <h3>Simulating Natural Behaviour with Code</h3>
                         <p>
-                            Learning to code using p5.js to simulate natural behaviours like slime mold movement and bird murmurations. Focusing on how simple rules give rise to complex biological patterns.
+                            Learning to code using p5.js to simulate natural behaviours like slime mold movement and bird murmurations. This work is exploratory and idea-led, illustrating on how simple rules give rise to complex, emergent biological patterns.
                         </p>
                     </div>
                 </a>
