--- a/index.html
+++ b/index.html
@@ -340,22 +340,25 @@
 		}
 
 		.project-images.everyday-large img {
-  		 	max-height: 400px;
   		 	max-width: 500px;  /* Or whatever height you want */
 		}
 
 		.project-images.river-layout {
     		display: grid;
-    		max-height: 400px;
     		grid-template-columns: 1fr 1fr;  /* Two columns */
     		grid-template-rows: auto auto;   /* Two rows */
-    		gap:0;
+    		gap:var(--space-md);
 		}
 
 		.project-images.river-layout img:first-child {
    			 grid-column: 1 / -1;  /* First image spans both columns (full width) */
 		}
 
+		.project-images.river-layout img {
+  			max-height: 300px;  /* ADD THIS NEW SECTION HERE */
+    		object-fit: cover;
+		}
+		
         .project-images img {
             width: 100%;
             height: 100%;
