--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         .project-image img {
             width: 100%;
             max-height: 450px;  /* Add this line */
-    		object-fit: cover;  /* Add this line */
+    		object-fit: contain;  /* Add this line */
             height: auto;
             border-radius: 4px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
@@ -336,7 +336,7 @@
 		}
 
 		.project-images.everyday-large {
-    		grid-template-columns: 1fr;  /* Makes images full width instead of side-by-side */
+    		grid-template-columns: 1fr 1fr; 
 		}
 
 		.project-images.everyday-large img {
@@ -362,7 +362,7 @@
         .project-images img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
             border-radius: 4px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
