--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jagrut Amuri — Biologist & Storyteller</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;600&family=DM+Sans:wght@400;500;700&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -45,6 +46,8 @@
             color: var(--color-ink);
             background-color: var(--color-paper);
             overflow-x: hidden;
+            transform: scale(0.9);  /* ADD THIS LINE */
+    		transform-origin: top center;  /* AND THIS LINE */
         }
 
         h1, h2, h3, h4 {
@@ -1055,6 +1058,33 @@
                         </p>
                     </div>
                 </div>
+                
+                <div class="project">
+                    <div class="project-header">
+                        <h3 class="project-title">Beyond Mediation</h3>
+                        <div class="project-meta">
+                            <span>Science Gallery Bengaluru</span>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <p class="project-bridge">
+                            <strong>Intention:</strong> Strengthening informal learning through behind-the-scenes systems and creation of artefacts that extend the life of the exhibition.
+                        </p>
+                        <div class="project-images">
+                            <img src="images/Beyond_1.jpeg" alt="Beyond mediation work">
+                            <img src="images/Beyond_2.jpeg" alt="268 Handbook">
+                        </div>
+                        <p>
+                            Alongside mediation, I worked on coordination, scheduling, and review processes that enabled the gallery to function day to day.
+                        </p>
+                        <p>
+                            This included coordinating with and maintaining records of SLE's, reviewing and onboarding mediators, and contributing to the designing of learning resources that carried the exhibition's ethos forward.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
             </div>
         </div>
     </section>
